# madmails

./: .gitignore  LICENSE  README.md  pylintrc  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yaml  codeql-analysis.yml
madmails/: main.py
madmails/controller/: mail.py
madmails/core/: middleware.py  security.py
madmails/model/: mail.py  sender_type.py
madmails/service/: factory.py  mail.py
madmails/service/gmail/: impl.py
tests/: test_unit_demo.py
tests/controller/: test_mail.py
tests/model/: test_mail.py
tests/service/: test_factory.py
tests/service/gmail/: test_impl.py
