[tool.poetry]
name = "madmails"
version = "0.1.0"
description = "A developer friendly service for sending mails"
authors = ["Julien Klaer <klaer.julien@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.17.4"
loguru = "^0.5.3"
pydantic = {extras = ["email"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
pylint = "^2.11.1"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pre-commit = "^2.15.0"
# Actually used for some unit testing with fastapi.testclient.TestClient
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "google"
indent_width = 4
column_limit = 120
